[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/entities/RoundBlinkingLight.gd" type="Script" id=1]
[ext_resource path="res://resources/Effects/light_bulb.png" type="Texture" id=2]
[ext_resource path="res://resources/Effects/light_mask.png" type="Texture" id=3]

[node name="RoundBlinkingLight" type="Node2D"]
z_index = 150
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="LightBulb" type="Sprite" parent="."]
light_mask = 524288
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 2 )

[node name="LightBulbOff" type="Sprite" parent="."]
modulate = Color( 0.513726, 0.380392, 0.380392, 1 )
self_modulate = Color( 0.12549, 0.0745098, 0.101961, 1 )
light_mask = 524288
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 2 )

[node name="Light" type="Light2D" parent="."]
texture = ExtResource( 3 )
energy = 2.0
range_height = 11.0

[node name="BlinkTimer" type="Timer" parent="."]
wait_time = 0.7
autostart = true

[node name="StartTimer" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="BlinkTimer" to="." method="_on_BlinkTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
